--- a/sass/_toc.sass
+++ b/sass/_toc.sass
@@ -14,7 +14,7 @@ main.has-toc
   nav.toc
     grid-area: toc
     position: sticky
-    top: calc(1.5em * 2 + 1.1em + 1em)
+    top: calc(1em * 2 + 1.1em + 1em)
     align-self: start
 
 .toc
